--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,6 @@ __pycache__
 myvenv
 db.sqlite3
 secrets.py
-dialogue_data.pkl
-models/train-on-amlcompute/processed_data_final.csv
-models/dialogue_data.pkl
-models/processed_data_final.csv
-models//train-on-amlcompute
+*processed_data_final.csv
+*dialogue_data.pkl
+*rnn_searcher.pkl
